# TPU

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  Makefile  README.md  mmu.sv  pe.sv  requirements.txt  run_tests.sh  tpu_host.py  verilator.vlt
docs/: FPGA.md  HARDWARE_COMPARISON.md  PERFORMANCE_ANALYSIS.md  REPO_MAP.md  SEQUENCER_REDESIGN.md  de1_soc_hardware.md  host_interface.md  pico2_ice_bringup.md  sequencer_uart_design.md  tpu_top_fsm.md  unified_buffer.md  weight_loader.md
docs/reference/de1_soc_user_manual/: DE1-SoC_User_manual_v06-1214842.md  DE1-SoC_User_manual_v06-1214842_meta.json
firmware/: CMakeLists.txt  README.md  main.c  tpu_tile.c  tpu_tile.h
firmware/pico2_ice_bridge/: CMakeLists.txt
fpga/: Makefile  tpu_top.pcf
fpga/de1soc/: Makefile  README.md  tpu_top_hps.qsf  tpu_top_hps.sdc
fpga/ice40/: Makefile  tpu_top.pcf
fpga/pico2_ice/: Makefile  tpu_top.pcf
mnist/: draw_demo.py  infer.py  train_mnist.py
mnist/model/: mnist_2x2_int8.npz
rtl/: accumulator.sv  activation.sv  bias.sv  fifo.sv  hps_bridge.sv  mmu.sv  pe.sv  pe_pair.sv  spi_slave.sv  systolic_data_setup.sv  tpu_core.sv  tpu_pkg.sv  tpu_sequencer.sv  tpu_top.sv  tpu_top_hps.sv  uart_rx.sv  uart_tx.sv  unified_buffer.sv  weight_fifo.sv  weight_loader.sv
tests/: accum_bias_tb.sv  accumulator_tb.sv  activation_tb.sv  bias_activation_tb.sv  bias_tb.sv  fifo_tb.sv  hps_bridge_tb.sv  hw_regression.py  mmu_accum_tb.sv  mmu_tb.sv  pe_pair_tb.sv  pe_tb.sv  spi_slave_tb.sv  systolic_data_setup_tb.sv  tpu_core_tb.sv  tpu_sequencer_2x4_tb.sv  tpu_sequencer_4x2_tb.sv  tpu_sequencer_4x4_tb.sv  tpu_sequencer_tb.sv  uart_rx_tb.sv  uart_tx_tb.sv  unified_buffer_tb.sv  weight_fifo_mmu_tb.sv  weight_fifo_tb.sv  weight_loader_fifo_tb.sv  weight_loader_tb.sv
tests/verilator/: tb_tpu_top.cpp
